--- a/templates/base.html
+++ b/templates/base.html
@@ -5,138 +5,114 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
-      crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
     />
-    <style></style>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+      header {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 20px 80px;
+        background-color: white;
+        /* border-bottom: 2px solid black; */
+        box-shadow: 0 10px 10px -10px gray;
+        height: 90px;
+      }
+      header .logo img {
+        width: 60px;
+      }
+      header nav ul li {
+        list-style-type: none;
+        display: inline-block;
+        padding: 10px 20px;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+          Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+          sans-serif;
+        font-weight: bold;
+        font-size: 18px;
+        background-color: teal;
+        color: white;
+        margin: -2px;
+        transition-duration: 0.3s;
+        cursor: pointer;
+        
+      }
+      header nav ul li:hover {
+        background-color: orange;
+      }
+      footer {
+        width: 100%;
+        height: 270px;
+        padding: 20px;
+        box-shadow: 0 -10px 10px -10px gray;
+      }
+      footer .title {
+        font-size: 26px;
+      }
+      footer ul li {
+        list-style-type: none;
+        font-size: 20px;
+      }
+      footer .icons {
+          display: flex;
+          flex-wrap: wrap;
+          padding: 20px 0;
+        }
+        footer .icons .icon {
+            width: 40px;
+        }
+      section.content {
+        padding: 20px;
+        width: 100%;
+        min-height: calc(100vh - 360px);
+      }
+    </style>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Softlixx</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Dropdown
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><hr class="dropdown-divider" /></li>
-                <li>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                </li>
-              </ul>
-            </li>
-          </ul>
-          <form class="d-flex" role="search">
-            <input
-              class="form-control me-2"
-              type="search"
-              placeholder="Search"
-              aria-label="Search"
-            />
-            <button class="btn btn-outline-success" type="submit">
-              Search
-            </button>
-          </form>
-        </div>
+    <header>
+      <div class="logo">
+        <img
+          src="https://yt3.googleusercontent.com/W1uNWAiXZXHLNH-AO-Xu35nT0A3F3iWF5niLVzHVyrvyCsqcA8rjOxxt8tORLY_tjckLgqcI=s900-c-k-c0x00ffffff-no-rj"
+        />
       </div>
-    </nav>
+      <nav>
+        <ul>
+          <li>Home</li>
+          <li>About</li>
+          <li>Services</li>
+        </ul>
+      </nav>
+    </header>
+    <section class="content">
+        {% block main %}{% endblock main %}
+    </section>
 
-    {% block body %}{% endblock body %}
-
-    <footer class="w-100 py-4 flex-shrink-0 bg-dark text-light">
-      <div class="container py-4 text-light">
-        <div class="row gy-4 gx-5 text-light">
-          <div class="col-lg-4 col-md-6 text-light">
-            <h5 class="h1 text-white text-light">FB.</h5>
-            <p class="small text-light">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-              eiusmod tempor incididunt.
-            </p>
-            <p class="small mb-0 text-light">
-              &copy; Copyrights. All rights reserved.
-              <a class="text-primary" href="#">Bootstrapious.com</a>
-            </p>
-          </div>
-          <div class="col-lg-2 col-md-6 text-light">
-            <h5 class="text-white mb-3 text-light">Quick links</h5>
-            <ul class="list-unstyled text-light">
-              <li><a href="#">Home</a></li>
-              <li><a href="#">About</a></li>
-              <li><a href="#">Get started</a></li>
-              <li><a href="#">FAQ</a></li>
-            </ul>
-          </div>
-          <div class="col-lg-2 col-md-6">
-            <h5 class="text-white mb-3">Quick links</h5>
-            <ul class="list-unstyled text-muted">
-              <li><a href="#">Home</a></li>
-              <li><a href="#">About</a></li>
-              <li><a href="#">Get started</a></li>
-              <li><a href="#">FAQ</a></li>
-            </ul>
-          </div>
-          <div class="col-lg-4 col-md-6">
-            <h5 class="text-white mb-3">Newsletter</h5>
-            <p class="small text-muted">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-              eiusmod tempor incididunt.
-            </p>
-            <form action="#">
-              <div class="input-group mb-3">
-                <input
-                  class="form-control"
-                  type="text"
-                  placeholder="Recipient's username"
-                  aria-label="Recipient's username"
-                  aria-describedby="button-addon2"
-                />
-                <button
-                  class="btn btn-primary"
-                  id="button-addon2"
-                  type="button"
-                >
-                  <i class="fas fa-paper-plane"></i>
-                </button>
-              </div>
-            </form>
-          </div>
+    <footer>
+      <div class="title">Softlixx</div>
+      <ul>
+        <li>Careers</li>
+        <li>Our Cafe</li>
+        <li>Chobani News</li>
+        <li>Foodservice</li>
+      </ul>
+      <div class="icons">
+        <div class="icon">
+          <i class="bi bi-facebook"></i>
         </div>
+        <div class="icon"><i class="bi bi-instagram"></i></div>
+        <div class="icon"><i class="bi bi-twitter"></i></div>
+        <div class="icon"><i class="bi bi-pinterest"></i></div>
+        <div class="icon"><i class="bi bi-youtube"></i></div>
       </div>
     </footer>
-
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
   </body>
 </html>
