--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,12 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
     />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+      crossorigin="anonymous"
+    />
     <style>
       * {
         margin: 0;
@@ -38,15 +43,23 @@
           sans-serif;
         font-weight: bold;
         font-size: 18px;
-        background-color: teal;
-        color: white;
+        /* background-color: teal; */
+        color: black;
         margin: -2px;
         transition-duration: 0.3s;
         cursor: pointer;
-        
+        border-bottom: 5px solid teal;
+        text-transform: capitalize;
+      }
+      header nav ul li a {
+        color: black;
+        text-decoration: none;
       }
       header nav ul li:hover {
         background-color: orange;
+      }
+      header nav ul li:hover {
+        color: white;
       }
       footer {
         width: 100%;
@@ -62,13 +75,13 @@
         font-size: 20px;
       }
       footer .icons {
-          display: flex;
-          flex-wrap: wrap;
-          padding: 20px 0;
-        }
-        footer .icons .icon {
-            width: 40px;
-        }
+        display: flex;
+        flex-wrap: wrap;
+        padding: 20px 0;
+      }
+      footer .icons .icon {
+        width: 40px;
+      }
       section.content {
         padding: 20px;
         width: 100%;
@@ -85,15 +98,13 @@
       </div>
       <nav>
         <ul>
-          <li>Home</li>
-          <li>About</li>
-          <li>Services</li>
+          <a href="/home"><li>home</li></a>
+          <a href="/products"> <li>products</li></a>
+          <a href=""><li>Services</li></a>
         </ul>
       </nav>
     </header>
-    <section class="content">
-        {% block main %}{% endblock main %}
-    </section>
+    <section class="content">{% block main %}{% endblock main %}</section>
 
     <footer>
       <div class="title">Softlixx</div>
@@ -113,6 +124,10 @@
         <div class="icon"><i class="bi bi-youtube"></i></div>
       </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
