--- a/templates/products.html
+++ b/templates/products.html
@@ -1,10 +1,21 @@
-{% extends "base.html" %} {% block main %} {% if count > 4 %}
-<h1 class="text-success">We Have {{count}} Products</h1>
-{% elif count > 2 %}
-<h1 class="text-warning">We Have {{count}} Products</h1>
-{% else %}
-<h1 class="text-danger">We Have {{count}} Products</h1>
-{% endif %}
+{% extends "base.html" %} {% block main %}
+
+<div class="d-flex justify-content-between align-items-center">
+  {% if count > 4 %}
+  <h1 class="text-success">We Have {{count}} Products</h1>
+  {% elif count > 2 %}
+  <h1 class="text-warning">We Have {{count}} Products</h1>
+  {% else %}
+  <h1 class="text-danger">We Have {{count}} Products</h1>
+  {% endif %}
+
+  <div>
+    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+      Create Product
+    </button>
+  </div>
+
+</div>
 
 <table class="table table-dark">
   <thead>
@@ -12,6 +23,7 @@
       <th>#</th>
       <th>Name</th>
       <th>Price</th>
+      <th>Actions</th>
     </tr>
   </thead>
   <tbody>
@@ -20,10 +32,58 @@
       <td>{{item.id}}</td>
       <td>{{item.name}}</td>
       <td>{{item.price}}</td>
+      <td>
+        <a class="btn btn-danger" href="/deleteproducts/?id={{item.id}}">
+          <i class="bi bi-trash3"></i>
+        </a>
+      </td>
     </tr>
 
     {% endfor %}
   </tbody>
 </table>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Create Product</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form method="POST" action="/createproducts/">
+          <div class="form-group">
+            {% csrf_token %}
+            <label for="name">Name</label>
+            <input type="text" name="name" id="name" class="form-control sm">
+          </div>
+          <div class="form-group">
+            <label for="price">Price</label>
+            <input type="number" name="price" id="price" class="form-control sm">
+          </div>
+          <div class="form-group">
+            <label for="detail">Detail</label>
+            <textarea name="detail" id="detail" rows="6" class="form-control sm"></textarea>
+          </div>
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" name="is_available" id="is_available">
+            <label class="form-check-label" for="is_available">
+              Is Available
+            </label>
+          </div>
+          <div class="d-flex justify-content-end">
+            <button class="btn btn-primary" type="submit">Submit</button>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+          Close
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
 
 {% endblock main %}
