--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,10 @@
     <title>Document</title>
     <link
       rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.18/dist/sweetalert2.min.css"
+    />
+    <link
+      rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
     />
     <link
@@ -20,6 +24,7 @@
         padding: 0;
         box-sizing: border-box;
       }
+
       header {
         width: 100%;
         display: flex;
@@ -31,9 +36,11 @@
         box-shadow: 0 10px 10px -10px gray;
         height: 90px;
       }
+
       header .logo img {
         width: 60px;
       }
+
       header nav ul li {
         list-style-type: none;
         display: inline-block;
@@ -51,37 +58,46 @@
         border-bottom: 5px solid teal;
         text-transform: capitalize;
       }
+
       header nav ul li a {
         color: black;
         text-decoration: none;
       }
+
       header nav ul li:hover {
         background-color: orange;
       }
+
       header nav ul li:hover {
         color: white;
       }
+
       footer {
         width: 100%;
         height: 270px;
         padding: 20px;
         box-shadow: 0 -10px 10px -10px gray;
       }
+
       footer .title {
         font-size: 26px;
       }
+
       footer ul li {
         list-style-type: none;
         font-size: 20px;
       }
+
       footer .icons {
         display: flex;
         flex-wrap: wrap;
         padding: 20px 0;
       }
+
       footer .icons .icon {
         width: 40px;
       }
+
       section.content {
         padding: 20px;
         width: 100%;
@@ -89,6 +105,7 @@
       }
     </style>
   </head>
+
   <body>
     <header>
       <div class="logo">
@@ -98,9 +115,15 @@
       </div>
       <nav>
         <ul>
-          <a href="/home"><li>home</li></a>
-          <a href="/products"> <li>products</li></a>
-          <a href=""><li>Services</li></a>
+          <a href="/home">
+            <li>home</li>
+          </a>
+          <a href="/products">
+            <li>products</li>
+          </a>
+          <a href="">
+            <li>Services</li>
+          </a>
         </ul>
       </nav>
     </header>
@@ -129,5 +152,8 @@
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
       crossorigin="anonymous"
     ></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.18/dist/sweetalert2.all.min.js"></script>
+
+    {% block script %}{% endblock script %}
   </body>
 </html>
