--- a/templates/products.html
+++ b/templates/products.html
@@ -23,6 +23,7 @@
       <th>#</th>
       <th>Name</th>
       <th>Price</th>
+      <th>Category</th>
       <th>Actions</th>
     </tr>
   </thead>
@@ -32,6 +33,7 @@
       <td>{{item.id}}</td>
       <td>{{item.name}}</td>
       <td>{{item.price}}</td>
+      <td>{{item.category.name}}</td>
       <td>
         <!-- <a class="btn btn-danger" href="/deleteproducts/?id={{item.id}}">
           <i class="bi bi-trash3"></i>
