Category Update Create

--- a/templates/base.html
+++ b/templates/base.html
@@ -121,8 +121,8 @@
           <a href="/products">
             <li>products</li>
           </a>
-          <a href="">
-            <li>Services</li>
+          <a href="/categories">
+            <li>Categories</li>
           </a>
         </ul>
       </nav>
