--- a/templates/category.html
+++ b/templates/category.html
@@ -31,9 +31,9 @@
         >
           <i class="bi bi-pencil-square"></i>
         </button>
-        <button class="btn btn-sm btn-outline-danger">
+        <a class="btn btn-sm btn-outline-danger" href="/categories/{{item.id}}/">
           <i class="bi bi-trash3"></i>
-        </button>
+        </a>
       </td>
     </tr>
     {% endfor %}
