--- a/templates/products.html
+++ b/templates/products.html
@@ -71,6 +71,15 @@
             <input type="number" name="price" id="price" class="form-control sm">
           </div>
           <div class="form-group">
+            <label for="category">Category</label>
+            <select name="category" id="category" class="form-select sm">
+              {% for item in categories %}
+              <option value="{{item.id}}">{{item.name}}</option>
+                
+              {% endfor %}
+            </select>
+          </div>
+          <div class="form-group">
             <label for="detail">Detail</label>
             <textarea name="detail" id="detail" rows="6" class="form-control sm"></textarea>
           </div>
