--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -18,6 +20,8 @@
       integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="{% static 'styles/style.css' %}" />
+
     <style>
       * {
         margin: 0;
@@ -109,9 +113,8 @@
   <body>
     <header>
       <div class="logo">
-        <img
-          src="https://yt3.googleusercontent.com/W1uNWAiXZXHLNH-AO-Xu35nT0A3F3iWF5niLVzHVyrvyCsqcA8rjOxxt8tORLY_tjckLgqcI=s900-c-k-c0x00ffffff-no-rj"
-        />
+        <!-- <img src="/static/image.jpg" /> -->
+        <img src="{% static 'image.jpg' %}" />
       </div>
       <nav>
         <ul>
@@ -155,5 +158,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.18/dist/sweetalert2.all.min.js"></script>
 
     {% block script %}{% endblock script %}
+
+    <!-- <script src="{% static 'js/script.js' %}"></script> -->
   </body>
 </html>
